# kodogenerator

./: .gitignore  CMakeLists.txt  CodeGenerator.sln  test.txt
ConsoleApplication23/: CMakeLists.txt  ConsoleApplication23.cpp  ConsoleApplication23.vcxproj  ConsoleApplication23.vcxproj.filters  File_IMA.c  File_IMA.cpp  File_IMA.h  Intel.c  Intel.cpp  Intel.h  Loader.c  Loader.cpp  Loader.h  Utils.c  Utils.cpp  Utils.h  common.h  cpp.hint  generator.c  generator.cpp  generator.h  main.c  main.cpp
One_File_Codegenerator/: CMakeLists.txt  One_File_Codegenerator.c  One_File_Codegenerator.cpp  One_File_Codegenerator.vcxproj  One_File_Codegenerator.vcxproj.filters
